Fix up z-index for sidebar and header

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -39,6 +39,7 @@ body {
 
 #header {
   position: relative;
+  z-index: 2;
 }
 
 .title-wrapper {
