--- a/app/assets/stylesheets/reveal_overrides.css.scss
+++ b/app/assets/stylesheets/reveal_overrides.css.scss
@@ -1,3 +1,7 @@
+.reveal {
+  z-index: 0;
+}
+
 .reveal a.flat-button {
   padding: 15px 60px;
   margin: 15px 0;
